# proptech-library

./: .env.example  .gitignore  README.md  pyproject.toml
proptech/: __init__.py  cli.py  db.py  features.py  models.py
sql/: schema.sql
