[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proptech-library"
version = "0.1.0"
description = "PropTech core library"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["proptech*"]     # only include the real package
exclude = ["sql*", "tests*"]
